<!-- res/menu/nav_menu.xml -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_data_connections"
            android:title="@string/menu_data_connections" />
        <item
            android:id="@+id/menu_health_summary"
            android:title="@string/menu_health_summary" />
        <item
            android:id="@+id/menu_insurance"
            android:title="@string/menu_insurance" />
        <item
            android:id="@+id/menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings" />
    </group>

</menu>
